# sentrysearch

./: .env.example  .gitignore  Dockerfile  Dockerfile.postgres  README.md  fly.postgres.toml  fly.toml  pyproject.toml
docs/: fly-deployment.md  video-quality-spec.md
sentrysearch/: api.py  cli.py  criticizer.py  embedder.py  evaluator.py  gemini_embedder.py  local_embedder.py  r2.py  scorer.py  store.py
tests/: conftest.py
